--- a/ht.html
+++ b/ht.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        git test
+        <title> test </title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
     </head>
 <body>
     <h1>hello world</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nam rerum odit aperiam animi atque, tenetur quas provident optio cum qui reiciendis harum reprehenderit accusantium adipisci quia libero placeat minus!</p>
+    <p> new project</p>
 </body>
 </html>
